--- a/BACKEND/.sequelizerc
+++ b/BACKEND/.sequelizerc
@@ -1,7 +1,5 @@
-const path = require('path')
-
+const path = require('path');
+ 
 module.exports = {
-    'config': path.resolve('./src/infrastructure/database/config','config.js'),
-    'seeders-path': path.resolve('./src/infrastructure/database/','seeders'),
-    'migrations-path': path.resolve('./src/infrastructure/database/','migrations'),
+  'config': path.resolve('config', 'config.js')
 }
