--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "if [ $CLIENT_ENV ]; then npm run postinstall-client; elif [ $SERVER_ENV ]; then npm run postinstall-server; else echo no environment detected, please set CLIENT_ENV or SERVER_ENV; fi",
     "postinstall-client": "cd web && npm install",
     "postinstall-server": "cd BACKEND && npm install",
-    "start": "node BACKEND/src/server.js"
+    "start": "react-scripts start"
+    
   }
 }
