--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -9,6 +9,13 @@
     "postinstall": "if [ $CLIENT_ENV ]; then npm run postinstall-client; elif [ $SERVER_ENV ]; then npm run postinstall-server; else echo no environment detected, please set CLIENT_ENV or SERVER_ENV; fi",
     "postinstall-client": "cd web && npm install",
     "postinstall-server": "cd BACKEND && npm install",
-    "start": "node BACKEND/src/server.js"
-  }
+    "start": "node src/server.js"
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "babel.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
